[FEAT/#20] 대학 일정 추가 여부 구현